tests/NormalTests/paczka1/fuzzy1/52870656.err
Error in line 1: HMyMkn S720 6,2
Error in line 5: aIFud S414 57,7
Error in line 23: B5D A673 92,6
Error in line 24: thGUUI A673 75,0
Error in line 31: HMyMkn S414 297,8
